--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "express": "^4.15.4",
     "express-session": "^1.15.5",
     "forever": "^0.15.3",
+    "jest": "^21.0.1",
     "mongoose": "^4.10.8",
     "morgan": "^1.8.2",
-    "mustache-express": "^1.2.5"
+    "mustache-express": "^1.2.5",
+    "supertest": "^3.0.0"
   }
 }
